# tuncam

./: .gitignore  CHANGELOG.md  PORTABLE_README.txt  README.md  doc_content.txt  pyproject.toml  start_tucam.bat  temp_info.txt  tucam_portable.spec
config/: user_settings.json
scripts/: create_desktop_shortcut.ps1  create_portable_shortcut.cmd  create_portable_shortcut.ps1
src/tucam_control/: TUCam.py  __init__.py  calibration.py  camera.py  camera_process.py  camera_types.py  concentration_smoother.py  data_processor.py  debug_log.py  gas_analyzer.py  main.py  resources.py  settings_store.py
src/tucam_control/ui/: _mpl_style.py  acquisition_tab.py  calibration_dialog.py  concentration_tab.py  data_tab.py  main_window.py  settings_tab.py
tests/: test_camera_process.py  test_camera_profile.py  test_concentration_smoother.py  test_concentration_tab.py  test_data_processor.py  test_gas_analyzer.py  test_main_window_alarm.py  test_main_window_smoothing.py  test_settings_store.py  test_settings_tab.py
