[project]
name = "tucam-control"
version = "0.1.0"
description = "Dhyana-95-V2 camera control & data processing application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "PySide6>=6.5",
    "python-docx>=1.2.0",
    "scipy>=1.10",
]

[project.scripts]
tucam-control = "tucam_control.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tucam_control"]
